--- a/submission3/README
+++ b/submission3/README
@@ -1,1 +1,28 @@
+Link to unlisted youtube video:
+https://youtu.be/8SIH7h3gZ1o
 
+Link to the Concept Map:
+https://github.com/errhythm/CSE424/blob/main/submission3/Concept%20Map.pdf (https://drive.google.com/file/d/1ACxoQ_ZvsuY55xtVU3wox3JdIXH8VcVo/view?usp=sharing)
+
+Name, Author, Edition, Year and Publisher of the Book:
+Speech and Language Processing, Jurafsky, 3rd Ed, 2022, Pearson
+
+Link to the book:
+https://web.stanford.edu/~jurafsky/slp3/
+
+Link to the book chapter:
+https://web.stanford.edu/~jurafsky/slp3/26.pdf
+
+Group Number:
+2
+
+Group Members:
+17201094	Mashuk Arefin Pranjol
+18101213	Jahidul Hasan
+18301001	Farhin Rahman
+18301007	Saiadul Arfain
+19101350	Bushra Yesmeen Anika
+20101214	Tanjib Ahmed
+20101298	Ehsanur Rahman Rhythm
+20141003	Rajvir Ahmed Shuvo
+20141046	Md. Abdullah Al Masum Anas
